--- a/index.Rmd
+++ b/index.Rmd
@@ -8,14 +8,16 @@ output:
  bookdown::pdf_book:
   includes:
    in_header: preamble.tex
-documentclass: book
+documentclass: report #book
 bibliography: [references.bib]
 biblio-style: apalike
 link-citations: true
 description: "A thesis to fulfil the requirements for the Doctor of Philosophy"
 ---
 
+\listoftables
 
+\listoffigures
 
 # Preface {-}
 
@@ -31,17 +33,24 @@ knitr::include_graphics('images/OUNZ_logo.png')
 
 \printglossary[style=super]
 
-\clearpage
+
 
 \addcontentsline{toc}{section}{Acronyms}
 
 \printglossary[type=\acronymtype,style=super]
 
-\clearpage
+
+
 SNP: Single nucleotide polymorphism
+
 T2D: Type 2 diabetes
+
 WGS: Whole genome (re)sequence
+
 XP-EHH: Cross population extended haplotype homozygosity
+
 iHH: integrated haplotype homozygosity
+
 iHS: integrated haplotype homozygosity score
+
 BMI: Body mass index
